fix overflow

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -50,7 +50,7 @@ $font-family-sans-serif: Inter;
 
 html {
   font-size: 62.5%;
-  overflow: hidden !important;
+  overflow-x: hidden !important;
 }
 body {
   color: #000;
